o Changed block on null behavior to cause script thread exception.
o Fix signal behavior so multiple signals cannot accumulate on a blocked thread. Thanks DrEvil.
o Changing gm version format from vMajor.Minor.BetaLetter to vMajor.Minor.Build. Probably won't change coded version to store past Minor unless process is automated. Probably won't use 4 components as each can be multi digit.

04/02/10
o Changed new to GM_NEW in gmCodeGen.cpp for consistency.  Thanks Sunray.

15/03/10
o Fix GC auto calibration. Thanks DrEvil.

27/05/10
o Improved Minimal example.  Not all errors were logged. Also enabled debug mode. Thanks xaxa.

09/07/10
o Updated code base for 64bit address target. (64bit builds of current binaries not made or tested yet.) 
o Updated system lib for 64bit Win OS compatibility.

16/08/10
o Added syntactical sugar for functions.  'function <name>(<parms>){<statements>}' Thanks 39ster.

17/06/11
o Fixed gmMachine::GetTypeId(), invalid string returned. Thanks Tiok.
o Changed project and workspaces from MSVC 8 (2005) to MSVC 10 (2010 SP1)
  To compile the Windows based examples & utils, you will need at least 'MS Visual C++ 2010 Express SP1' freely downloadable from Microsoft.
  To run the Windows examples you will need VC10 compatible runtimes installed, The '.Net Framework' redistributables or 'Windows Update' will provide these.
  (Left VC6 and VC8 projects and workspaces in for now.  Debugger still relies on MFC which is not supported by 2005 Express edition.)
o Changed #define in MSVC platform file to _M_X64 which is correct 64bit build macro. Also renamed another misspelled macro.

29/06/11
o Add 64bit MSVC build configurations for GME

2/10/11
o Fixed GC root scan.
o Increased GMTHREAD_MAXBYTESIZE to allow samples to run in 64bit
o Fixed gmTable 64bit gmVariable equality test.
o Fixed byte code generator. 64bit was mixing 32 and 64 bit patched addresses.

3/10/11
o Fixed GC root scan to ignore persistent objects.